--- a/assessment.html
+++ b/assessment.html
@@ -8,7 +8,7 @@
       property="og:url"
       content="https://kn0812.github.io/assessment/assessment.html"
     />
-    <meta property="og:title" content="あなたのいいところ診断" />
+    <meta property="og:title" content="kn0812が作ったあなたのいいところ診断" />
     <meta
       property="og:description"
       content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。"
